@@ -1,3 +1,6 @@
+2009-12-21 Fatih Aşıcı <fatih@pardus.org.tr>
+		* pisi/cli/history.py: Fix exceptions raise after quitting history view.
+
 2009-12-16 Serdar Dalgıç <serdar@pardus.org.tr>
 		* pisi/cli/blame.py: Several enhancements in blame:
 			- pisi bl works for LC_ALL=C
